fixed overflow on sides when scaling down flex

--- a/src/components/Landing-Home.scss
+++ b/src/components/Landing-Home.scss
@@ -72,6 +72,7 @@
 		max-height: 75vh;
 		position: relative;
 		width: 100%;
+		right: -10px;
 	}
 }
 
@@ -82,7 +83,6 @@
 	text-align: center;
 	z-index: 2;
 	@media (max-width: 767px) {
-		text-align: left;
 		font-size: 45px;
 		line-height: 70px;
 	}
@@ -101,7 +101,7 @@
 	margin-top: 26px;
 	z-index: 2;
 	@media (max-width: 767px) {
-		padding: 0 20px;
+		padding: 0 10%;
 	}
 }
 .welcomeButton{
@@ -195,7 +195,7 @@
 	align-items: center;
 	justify-content: center;
 	max-width: 100vw;
-	@media (max-width: 567px) {
+	@media (max-width: 667px) {
 		display: block;
 	}
 }
